Reverse the expander/collapser switching (it was backwards).  Don't do the (incorrect) test for text DOM elements, they're not listed in childNodes anyway.  Fix help label. (RDST-310)

--- a/mint/web/content/css/mint.css
+++ b/mint/web/content/css/mint.css
@@ -1128,6 +1128,10 @@ div.clearleft {
     padding-left: 0em;
 }
 
+.expandableformgroup div.help{
+    clear: left;
+}
+
 .smallSpecs,
 table.buildstable td.buildInfo {
     font-size: smaller;
